--- a/index.html
+++ b/index.html
@@ -97,13 +97,7 @@
       </div>
     </main>
 
-    <footer class="text-center mt-8 text-sm text-gray-500">
-      <p class="mb-2">
-        <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a>
-      </p>
-      <p>CEORater 2025. A TEK2day Holdings company.</p>
-    </footer>
-  
+    <footer class="text-center mt-8 text-sm text-gray-500">CEORater 2025. A TEK2day Holdings company.</footer>
   </div>
 
   <div id="loginModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
@@ -385,9 +379,9 @@
               <div class="flex justify-between"><span class="text-gray-500">Avg Annual TSR vs. QQQ</span><span class="font-bold ${avgAlphaCol}">${pct(c.avgAnnualTsrAlpha)}</span></div>
               <div class="flex justify-between border-t mt-2 pt-2"><span class="text-gray-500">CEO Compensation ($MM)</span><span>$${money(c.compensation, 1)}</span></div>
               <div class="flex justify-between"><span class="text-gray-500">Comp Cost / 1% Avg TSR ($MM)</span><span>$${money(c.compensationCost, 3)}</span></div>
-              <div class="flex justify-between"><span class="text-gray-500">Tenure (yrs)</span><span>${c.tenure.toFixed(1)}</span></div>
-              <div class="flex justify-between"><span class="text-gray-500">Industry</span><span>${c.industry || 'N/A'}</span></div>
-              <div class="flex justify-between"><span class="text-gray-500">Sector</span><span>${c.sector || 'N/A'}</span></div>
+             <div class="flex justify-between"><span class="text-gray-500">Tenure (yrs)</span><span>${c.tenure.toFixed(1)}</span></div>
+             <div class="flex justify-between"><span class="text-gray-500">Industry</span><span class="text-right">${c.industry || 'N/A'}</span></div>
+             <div class="flex justify-between"><span class="text-gray-500">Sector</span><span class="text-right">${c.sector || 'N/A'}</span></div>
             </div>
           </div>
           <div class="flex justify-between text-sm items-center pt-3 mt-3 border-t">
